# nextjs-fastapi-starter

./: .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  database.py  main.py  pyproject.toml  settings.py
backend/api/v1/health/: controller.py
backend/api/v1/health/tests/: test_controller.py
backend/migrations/: env.py
backend/migrations/versions/: 2340309212ac_create_users_table.py
backend/models/: __init__.py  users.py
frontend/: .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  next.config.js  package-lock.json  package.json
