[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Yoshi_F"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.94.0"
uvicorn = "^0.21.0"
gunicorn = "^20.1.0"
sqlalchemy = "^2.0.5.post1"
alembic = "^1.10.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
flake8-pyproject = "^1.2.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.py$'
extend-exclude = '''
(
    ^/migrations
    | \.idea
    | \.vscode
    | \.mypy_cache
    | \.pytest_cache
)
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_local_folder = ['config', ]
skip_gitignore = true
skip = ["migrations/versions",]

[tool.flake8]
max-line-length = 120
max-complexity = 18
ignore = "E203,E266,W503,"
exclude = ".venv, versions"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov --ignore='api/__init__.py'"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["api"]
